--- a/Military_RPG/Military_RPG.csproj
+++ b/Military_RPG/Military_RPG.csproj
@@ -46,16 +46,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AirCraft.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AirCraft.Designer.cs">
+      <DependentUpon>AirCraft.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DataBinding.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Inventory.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Inventory.Designer.cs">
+      <DependentUpon>Inventory.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AirCraft.resx">
+      <DependentUpon>AirCraft.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Inventory.resx">
+      <DependentUpon>Inventory.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -65,6 +84,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -78,6 +98,27 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\obstacle.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\scout.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\tree.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\trees.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\_campfire.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\bullet.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\campfire.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
