--- a/Military_RPG/Military_RPG.csproj
+++ b/Military_RPG/Military_RPG.csproj
@@ -74,6 +74,12 @@
     <Compile Include="InventoryForm.Designer.cs">
       <DependentUpon>InventoryForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Obstacles.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Obstacles.Designer.cs">
+      <DependentUpon>Obstacles.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AirCraftForm.resx">
@@ -87,6 +93,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="InventoryForm.resx">
       <DependentUpon>InventoryForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Obstacles.resx">
+      <DependentUpon>Obstacles.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
